Update 'pyp0m9rxh-nodejs' component image to: quay.io/rhtap_qe/rhtap-qe-nodejs:9a6c12541e5041543c744dc23734ebb7e7f64a0e@sha256:9aa3bd9593527d2ffd1461a5bd08aac80b229ec8aceda11ca925c9a56612c5b3

--- a/components/pyp0m9rxh-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/pyp0m9rxh-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: pyp0m9rxh-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-nodejs:9a6c12541e5041543c744dc23734ebb7e7f64a0e@sha256:9aa3bd9593527d2ffd1461a5bd08aac80b229ec8aceda11ca925c9a56612c5b3
+          name: container-image
